fix: Improve layout and resolution of crest
The crest was blurry and positioned oddly across desktop and mobile.

This commit uses a much higher resolution image and improves
the layout to look much nicer.

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,8 +1,8 @@
 $color-background: #511314;
-$color-onbackground: #cfd8dc;
+$color-onbackground: #f4ecdf;
 $color-shadow: rgba(53, 11, 11, 0.2);
 $color-surface: #821d1d;
-$color-onsurface: #cfd8dc;
+$color-onsurface: #f4ecdf;
 $color-link: #fae17d;
 $color-link-hover: #bf8700;
 
