--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -45,13 +45,13 @@ h6 {
     line-height: 1.5;
 
     &:not(:first-child) {
-        margin-top: 2.2em;
+        margin-top: .25em;
     }
 }
 
 h1 {
-    font-size: 6.5rem;
-    line-height: 80px;
+    font-size: 5rem;
+    line-height: 60px;
     margin: 0 -10px 0 0;
 
     @media (min-width: $mobile-break) {
